Features: BBCode UI and sitemap announce
Added BBCode UI formatter (markitup!)
Added automatic announce of sitemap.xml on Google, Bing and Yahoo search tool

--- a/blog/static/css/stylesheet.css
+++ b/blog/static/css/stylesheet.css
@@ -34,6 +34,7 @@ hr {border: 1px solid #837d5f; height:0px; border-top: 1px solid #655f43; margin
 
 img {border-style: none;}
 
+input[type="submit"] {margin: 10px 0 0;}
 /**********************************/
 
 div#content {margin: 0 auto; width: 850px; display: table;}
