--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,7 +43,7 @@ a, h1, h2, h3, h4, strong {font-weight: bold;}
 
 h1 {font-size: 28px;}
 h2 {font-size: 24px;}
-h3 {font-size: 18.5px; padding: 20px 0 5px;}
+h3 {font-size: 18.5px; margin: 20px 0 5px;}
 h4 {font-size: 13.5px;}
 
 a {color: #70694a; text-decoration: none;}
