--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -62,31 +62,31 @@ dt {float: left; margin: 0 5px 0 0;}
 
 textarea {height: 100px;}
 
-p.warning {padding: 5px 0;}
+p.warning {padding: 5px 0; font-weight: bold;}
 
 /**********************************/
 
 div#content {margin: 0 auto; width: 850px; display: table;}
 
-div#main {width:630px; height: 100%;}
+div#main {width:630px; height: 100%; margin-bottom: 30px;}
 div#main input[type="text"], textarea {padding: 2px 2px 3px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;}
 
-div#main h2 {color: #cce7d4; padding: 7px 10px; background-color: #70694a;}
-div#main h2 a {color: #cce7d4;}
-div#main h2 a:hover {color: #a29979;}
+div#main > div.post > h2, div#main > div.section > h2 {color: #cce7d4; padding: 7px 10px; background-color: #70694a;}
+div#main > div.post > h2 a, div#main > div.section > h2 a {color: #cce7d4;}
+div#main > div.post > h2 a:hover, div#main > div.section > h2 a:hover {color: #a29979;}
 
 .post, .section {margin: 30px 0 0; padding: 10px 0 10px; background: rgba(255, 255, 255, 0.7); -moz-box-shadow: -5px 0px 15px #999; -webkit-box-shadow: -5px 0px 15px #999; box-shadow: -5px 0px 15px #999;}
 
 .section .margin {margin: 10px 10px 0;}
 
-.post h3 {margin: 5px 0 0 10px;}
-.post #text {margin: 15px 10px;}
-.post #text h2 {background: none;}
-.post #text p {margin: 0; line-height: 18px; text-align: justify;}
-.post #footer ul {margin: 10px 0 0 10px; font-size: 15px;}
-.post #footer ul li {display: inline;}
-.post #footer ul li a {color: #8e8768}
-.post #footer ul li a:hover {border-bottom: 1px dashed #70694a;}
+.post h3 {font-size: 15px; margin: 5px 0 0 10px;}
+.post .text {margin: 15px 10px;}
+.post .text h2 {background: none; color: #70694a; font-size: 21px;}
+.post .text p {margin: 0; line-height: 18px; text-align: justify;}
+.post .footer ul {margin: 10px 0 0 10px; font-size: 15px;}
+.post .footer ul li {display: inline;}
+.post .footer ul li a {color: #8e8768}
+.post .footer ul li a:hover {border-bottom: 1px dashed #70694a;}
 
 /*****************************/
 
