--- a/css/style.sass
+++ b/css/style.sass
@@ -159,6 +159,7 @@ section#content
 
 			> a, > a:visited
 				color: $light
+				border-bottom: 1px dashed $dark
 
 			> a:hover
 				color: $lighter-dark
@@ -175,6 +176,11 @@ section#content
 
 			> a:hover
 				color: $dark-hover
+
+		> dl > dt
+			font-weight: bold
+			margin: 0 5px 0 0
+			float: left
 
 /* sidebar */
 section#container > aside
