--- a/css/style.sass
+++ b/css/style.sass
@@ -146,10 +146,14 @@ section#content
 	> article, > section.intern
 		margin: 30px 0 0
 		padding: 10px 0 10px 10px
+		font-size: 14.5px
 		background: rgba(255, 255, 255, 0.7)
 		-moz-box-shadow: -5px 0px 15px #999
 		-webkit-box-shadow: -5px 0px 15px #999
 		box-shadow: -5px 0px 15px #999
+
+		> p
+			font-size: 14.5px
 
 		> h2
 			margin: 0 0 7px -10px
